[tool.poetry]
name = "meetup-ticket-raffle"
version = "0.1.0"
description = "Handing out tickets randomly while rewarding loyal community members."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
meetup-token-manager = "^0.2.0"
meetup-client = "^0.3.1"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
pandas-gbq = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
